[package]
name = "a8c-secrets"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing encrypted secrets in Automattic mobile repositories"

[dependencies]
age = { version = "0.11", features = ["armor"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
