[package]
name = "a8c-secrets"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for managing encrypted secrets in Automattic mobile repositories"

[dependencies]
age = { version = "0.11", features = ["armor"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
rpassword = "7.4.0"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-permissions = "0.2.4"

[dev-dependencies]
assert_cmd = "2"
