[package]
name = "a8c-secrets"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for managing encrypted secrets in Automattic mobile repositories"
repository = "https://github.com/Automattic/a8c-secrets"
license = "GPL-2.0-or-later"

[dependencies]
age = { version = "0.11", features = ["armor"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "6"
inquire = "0.7"
rpassword = "7.4.0"
serde = { version = "1", features = ["derive"] }
shell-words = "1.1"
tempfile = "3"
toml = "0.8"
zeroize = "1.7"

[target.'cfg(windows)'.dependencies]
windows-permissions = "0.2.4"

[dev-dependencies]
assert_cmd = "2"
serial_test = "3"
temp-env = "0.3"
